<?xml version="1.0"?>
<package format="2">
  <name>joy_actions</name>
  <version>0.0.0</version>
  <description>The joy_actions package</description>

  <maintainer email="agr.saurav1@gmail.com">Saurav Agarwal</maintainer>
  <author email="agr.saurav1@gmail.com">Saurav Agarwal</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <export>
  </export>

</package>
